added scrubbable depth select; fixed several manip bugs

--- a/client/main.css
+++ b/client/main.css
@@ -42,6 +42,12 @@
 	width: 45px;
 }
 
+.TKAdjustableNumber {
+	position:relative;
+	color: #46f;
+	border-bottom: 1px dashed #46f;
+}
+
 .bottom-buffer {
 	margin-bottom:20px;
 }
